--- a/MavenVtigerFramework/test-output/old/Default suite/classes.html
+++ b/MavenVtigerFramework/test-output/old/Default suite/classes.html
@@ -4,14 +4,14 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.Vtiger.TestScript.SalesOrderCreateTest</td>
+<td>com.Vtiger.TestScript.LeadCreateTest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>salesOrderCreate</td>
+<td>createLeads</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
