--- a/MavenVtigerFramework/test-output/old/Default suite/methods.html
+++ b/MavenVtigerFramework/test-output/old/Default suite/methods.html
@@ -1,18 +1,18 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="ceabc1">  <td>20/06/25 00:56:50</td>   <td>0</td> <td title="&gt;&gt;BaseClass.configBS()[pri:0, instance:com.Vtiger.TestScript.SalesOrderCreateTest@42e26948]">&gt;&gt;configBS</td> 
+<tr bgcolor="ceabc1">  <td>20/06/25 01:24:50</td>   <td>0</td> <td title="&gt;&gt;BaseClass.configBS()[pri:0, instance:com.Vtiger.TestScript.LeadCreateTest@42e26948]">&gt;&gt;configBS</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1447689627</td>   <td></td> </tr>
-<tr bgcolor="ceabc1">  <td>20/06/25 00:56:50</td>   <td>16</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.configBC()[pri:0, instance:com.Vtiger.TestScript.SalesOrderCreateTest@42e26948]">&gt;&gt;configBC</td> 
+<tr bgcolor="ceabc1">  <td>20/06/25 01:24:50</td>   <td>22</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.configBC()[pri:0, instance:com.Vtiger.TestScript.LeadCreateTest@42e26948]">&gt;&gt;configBC</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1447689627</td>   <td></td> </tr>
-<tr bgcolor="ceabc1">  <td>20/06/25 00:56:58</td>   <td>7822</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.configBM()[pri:0, instance:com.Vtiger.TestScript.SalesOrderCreateTest@42e26948]">&gt;&gt;configBM</td> 
+<tr bgcolor="ceabc1">  <td>20/06/25 01:24:56</td>   <td>6329</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.configBM()[pri:0, instance:com.Vtiger.TestScript.LeadCreateTest@42e26948]">&gt;&gt;configBM</td> 
 <td>&nbsp;</td>  <td>main@1447689627</td>   <td></td> </tr>
-<tr bgcolor="69b199">  <td>20/06/25 00:57:03</td>   <td>13217</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SalesOrderCreateTest.salesOrderCreate()[pri:0, instance:com.Vtiger.TestScript.SalesOrderCreateTest@42e26948]">salesOrderCreate</td> 
+<tr bgcolor="69b199">  <td>20/06/25 01:25:01</td>   <td>11433</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LeadCreateTest.createLeads()[pri:0, instance:com.Vtiger.TestScript.LeadCreateTest@42e26948]">createLeads</td> 
   <td>main@1447689627</td>   <td></td> </tr>
-<tr bgcolor="ceabc1">  <td>20/06/25 00:57:27</td>   <td>37207</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.configAM()[pri:0, instance:com.Vtiger.TestScript.SalesOrderCreateTest@42e26948]">&lt;&lt;configAM</td> 
+<tr bgcolor="ceabc1">  <td>20/06/25 01:25:16</td>   <td>26133</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.configAM()[pri:0, instance:com.Vtiger.TestScript.LeadCreateTest@42e26948]">&lt;&lt;configAM</td> 
 <td>&nbsp;</td>  <td>main@1447689627</td>   <td></td> </tr>
-<tr bgcolor="ceabc1">  <td>20/06/25 00:57:30</td>   <td>40060</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.configAC()[pri:0, instance:com.Vtiger.TestScript.SalesOrderCreateTest@42e26948]">&lt;&lt;configAC</td> 
+<tr bgcolor="ceabc1">  <td>20/06/25 01:25:19</td>   <td>28931</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.configAC()[pri:0, instance:com.Vtiger.TestScript.LeadCreateTest@42e26948]">&lt;&lt;configAC</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1447689627</td>   <td></td> </tr>
-<tr bgcolor="ceabc1">  <td>20/06/25 00:57:31</td>   <td>40961</td> <td title="&lt;&lt;BaseClass.configAS()[pri:0, instance:com.Vtiger.TestScript.SalesOrderCreateTest@42e26948]">&lt;&lt;configAS</td> 
+<tr bgcolor="ceabc1">  <td>20/06/25 01:25:20</td>   <td>29744</td> <td title="&lt;&lt;BaseClass.configAS()[pri:0, instance:com.Vtiger.TestScript.LeadCreateTest@42e26948]">&lt;&lt;configAS</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1447689627</td>   <td></td> </tr>
 </table>
